Закоммитить : поправлен баг с переключением аудио на следующее когда песня заканчивается самостоятельно, добавлена кнопка назад,  добавлена кнопка поделится и шафл ( пока без отмены его),  поправлен экран авторизации ( не до конца)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegistrationActivity"></activity>
-        <activity android:name=".LoginPasswordActivity" />
+        <activity android:name=".ui.RegistrationActivity"></activity>
+        <activity android:name=".ui.LoginPasswordActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
