--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'org.jetbrains.anko:anko:0.10.4'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.3.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
 kotlin {
     experimental {
