--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-javafx:1.3.3'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 kotlin {
     experimental {
