--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.InvateFriendsActivity"></activity>
+        <activity android:name=".ui.ProfileUserActivity"></activity>
+        <activity android:name=".ui.InvateFriendsActivity" />
         <activity android:name=".ui.PremiumActivity" />
         <activity android:name=".ui.SettingsActivity" />
         <activity android:name=".ui.SignUpWithEmailActivity" />
